# lab_08.2

./: CMakeLists.txt
include/: main.h
src/: h.cpp  main.cpp
tests/: test_h.cpp
